# raytracer

./: dune-project
lib/: dune
lib/core/: aabb.ml  aabb.mli  dune  geometry.ml  geometry.mli  interval.ml  interval.mli  ray.ml  ray.mli  vec.ml  vec.mli
lib/rendering/: color.ml  color.mli  dune  hittable.ml  hittable.mli  materials.ml  materials.mli
lib/scene/: bvh_node.ml  bvh_node.mli  camera.ml  camera.mli  dune  quad.ml  quad.mli  sphere.ml  sphere.mli  volume.ml  volume.mli  world.ml  world.mli
test/: dune  test_aabb.ml  test_color.ml  test_geometry.ml  test_interval.ml  test_materials.ml  test_randomized_vec.ml  test_ray.ml  test_sphere.ml  test_vec.ml  test_world.ml
